# Computational_Intelligence

./: README.md
Lab1/: README.md  pyproject.toml  set_covering.py
lab1/: README.md  pyproject.toml  set_covering.py
lab2/: README.md  __init__.py  lab2.py  pyproject.toml  result_lab2.csv
lab3/: README.md  pyproject.toml
lab3/MinMax/: main.py  solution_search.py
lab3/Reinforcement learning/: Agent.py  Nim.py  State_Action.py
lab3/lab3/: lab3.ipynb  lab3.py
