[tool.poetry]
name = "lab1-set-covering"
version = "0.1.0"
description = ""
authors = ["Luca Villani <s304992@studenti.polito.it>"]
readme = "README.md"
packages = [{include = "lab1_set_covering"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
